--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 1rem;
+  height: 100dvh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.border-gradient {
+  border: 2px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(129.59deg, #969696 0%, #343434 98.18%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* .form-container {
+  background: #27292d;
+  border: 2px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(129.59deg, #969696 0%, #343434 98.18%);
+} */
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
 }
 
-.card {
-  padding: 2em;
+.form-group > label {
+  margin-bottom: 10px;
 }
-
-.read-the-docs {
-  color: #888;
+.form-group > input {
+  background: inherit;
+  border: 1.5px solid #35373b;
+  padding: 12px;
+  border-radius: 0.5rem;
 }
